--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
   <!-- Google Fonts: Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
-  <title>React App</title>
+  <title>Google Books Search</title>
 </head>
 
 <body>
