Updating seo for images, search, social media etc.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,22 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="theme-color" content="#74c69d" />
+  <meta name="title" property="og:title" content="Google Books Search" />
+  <meta name="description" property="og:description" content="A full stack, digital book searching app with a personal bookshelf to save books you want to read, using the Google Books API." />
+  <meta name="url" property="og:url" content="http://google-books-loaf.herokuapp.com/" />
+  <meta name="keywords" content="books, search, library, full stack, api, googleapis" />
+  <meta name="author" content="David Metcalf" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="website" />
+  <meta name="image" property="og:image" content="http://google-books-loaf.herokuapp.com/images/logo192.png" />
+  <meta property="og:image:secure_url" content="http://google-books-loaf.herokuapp.com/images/logo192.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@davidmcodes" />
+  <meta name="twitter:title" content="Google Books Search"></meta>
+  <meta name="twitter:description" content="A full stack, digital book searching app with a personal bookshelf to save books you want to read, using the Google Books API." />
+  <meta name="twitter:image" content="http://google-books-loaf.herokuapp.com/images/logo192.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!-- Google Fonts: Poppins -->
