Updating image for meta.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,14 +13,14 @@
   <meta name="author" content="David Metcalf" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta name="image" property="og:image" content="http://google-books-loaf.herokuapp.com/images/logo192.png" />
-  <meta property="og:image:secure_url" content="http://google-books-loaf.herokuapp.com/images/logo192.png" />
+  <meta name="image" property="og:image" content="http://google-books-loaf.herokuapp.com/book-search.png" />
+  <meta property="og:image:secure_url" content="http://google-books-loaf.herokuapp.com/book-search.png" />
   <meta property="og:image:type" content="image/png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="@davidmcodes" />
   <meta name="twitter:title" content="Google Books Search"></meta>
   <meta name="twitter:description" content="A full stack, digital book searching app with a personal bookshelf to save books you want to read, using the Google Books API." />
-  <meta name="twitter:image" content="http://google-books-loaf.herokuapp.com/images/logo192.png" />
+  <meta name="twitter:image" content="http://google-books-loaf.herokuapp.com/book-search.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!-- Google Fonts: Poppins -->
